# A-simple-rust-redirector-URL-shortener

./: .env.example  .gitignore  Cargo.toml  README.md
src/: backup  main.rs
